--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tasbih
-description: A new Flutter application.
+description: My first Android application.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.3.0+1.3.0
+version: 1.4.0+1.4.0
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   url_launcher: ^6.2.1
   redirect_icon: ^0.0.1
+  fluttertoast: ^8.2.4
+
 
   change_app_package_name: ^1.1.0
 
@@ -65,6 +67,7 @@ flutter:
 
   assets:
     - assets/myPhoto.jpg
+    - assets/bead.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
